# ResearchProject

./: .env.example  .gitignore  LICENSE  Makefile  README.md  Results.md  Statistical-Analysis.md  Statistical-Framework.md  TODO.md  config.json.example  config.test.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  results.md  schema.sql  setup.py  test_schema.sql
.kiro/settings/: mcp.json
.kiro/specs/protein-data-collector/: design.md  requirements-streamlined.md  requirements.md  tasks.md
.kiro/steering/: project-organization.md
config/: development.json  production.json
db/: hybrid_schema.sql  protein_data.db  protein_data.db-shm  protein_data.db-wal  protein_data.db.backup_20260110_172821  schema_sqlite.sql
docs/: database-schema.md  focused-schema-guide.md  interpro-api-interface.md  prerequisites.md  production-scripts-guide.md  project-completion-summary.md  protein-batch-schema.json  scripts-workflow-guide.md  uniprot_fields_summary.md
figures/chimerax manual/: HYAL3-iso.cxs  RPE-can.cxs  RPE-iso.cxs  TIM only beta.cxs  TIM.cxs
protein_data_collector/: __init__.py  alerting.py  cache.py  cli.py  config.py  errors.py  logging_config.py  monitoring.py  performance.py  rate_limiter.py  retry.py  server.py
protein_data_collector/analysis/: motif_annotator.py  tim_barrel_alignment.py
protein_data_collector/api/: __init__.py  ensembl_client.py  interpro_client.py  rest_api.py  uniprot_client.py
protein_data_collector/collector/: __init__.py  data_collector.py  interpro_collector.py  uniprot_collector.py
protein_data_collector/database/: __init__.py  connection.py  migrations.py  schema.py  storage.py
protein_data_collector/models/: __init__.py  entities.py  validation.py
protein_data_collector/query/: __init__.py  engine.py  export.py
protein_data_collector/validation/: __init__.py
scripts/: README.md  analyze_as_domain_structure.py  analyze_as_junctions.py  analyze_as_splice_junctions.py  analyze_domain_length_subgroups.py  analyze_exon_junctions.py  analyze_junction_consistency.py  analyze_junction_enrichment.py  analyze_motif_enrichment.py  analyze_vsp_boundaries.py  analyze_vsp_exon_count.py  annotate_disrupted_motifs.py  annotate_motifs.py  backfill_domain_locations.py  backfill_exons.py  backfill_isoform_exons.py  backfill_protein_metadata.py  build_affected_isoforms.py  build_canonical_analysis.py  build_tim_barrel_isoforms.py  cleanup_database_schema.py  collect.py  collect_ensembl.py  collect_human_proteins.py  collect_tim_barrel_entries.py  create_analysis_table.py  create_sqlite_simple.py  cross_validate_hmmer.py  dedup_by_gene.py  direct_uniprot_api_collector.py  download_isoform_structures.py  fetch_gene_names.py  install.bat  install.ps1  install.sh  junction_utils.py  migrate.py  migrate_database_schema.py  plot_hyal1_heatmap.py  plot_junction_alignment.py  (+7 more)
tests/: __init__.py  conftest.py  test_api_integration.py  test_api_integration_fallback.py  test_collection_progress_persistence.py  test_complete_isoform_data_collection.py  test_config.py  test_data_validation.py  test_database.py  test_database_schema_integrity.py  test_error_handling.py  test_hierarchical_data_integrity.py  test_logging_config.py  test_models.py  test_motif_annotator.py  test_query.py  test_query_result_accuracy.py  test_retry_behavior.py  test_uniprot_parser.py
